@@ -202,9 +202,9 @@
 	[self initThoMoServer];
 #endif
 	
-//	[[ScriptingCore sharedInstance] runScript:@"javascript-spidermonkey/main.js"];
+	[[ScriptingCore sharedInstance] runScript:@"javascript-spidermonkey/main.js"];
 //	[[ScriptingCore sharedInstance] runScript:@"javascript-spidermonkey/playground.js"];
-	[[ScriptingCore sharedInstance] runScript:@"javascript-spidermonkey/game-main.js"];
+//	[[ScriptingCore sharedInstance] runScript:@"javascript-spidermonkey/game-main.js"];
 
 }
 @end
